--- a/src/main/resources/templates/serviceTypeParameter/addServiceTypeParameter.html
+++ b/src/main/resources/templates/serviceTypeParameter/addServiceTypeParameter.html
@@ -77,7 +77,7 @@
                                                             </div>
                                                         </div>
                                                         <!--Specification Name -->
-                                                        <div class="form-row text-right">
+                                                       <!-- <div class="form-row text-right">
                                                             <div class="col-md-4">
                                                                 <label class="control-label" for="title">Specification Name :</label>
                                                             </div>
@@ -89,7 +89,7 @@
                                                                             th:value="${specificationName}"></option>
                                                                 </select>
                                                             </div>
-                                                        </div>
+                                                        </div>-->
                                                         <!--Max-->
                                                         <!--<div class="form-group row">
                                                             <label th:for="${'max'}" class="col-sm-2 col-form-label ">
