--- a/src/main/resources/templates/serviceType/addServiceType.html
+++ b/src/main/resources/templates/serviceType/addServiceType.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: headerFragment}">
+<html lang="en">
+<head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
 </head>
 <body>
-<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <div class="container-fluid bg-secondary form-Border">
     <div class="row text-center formManagement border-info">
@@ -17,7 +17,8 @@
         <div class="col">
             <h4 class="text-light text-center">
                 <strong>
-                    <span th:text="${addStatus==true?'New Service Type Add':'Update Service Type Details'}"></span>
+                    <span
+                            data-th-text="${addStatus==false?'New Service Type Add':'Update Service Type Details'}"></span>
                 </strong>
             </h4>
         </div>
@@ -34,97 +35,106 @@
     <div class="content-wrapper"><!-- content-wrapper Start -->
 
         <div class="content-header">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="row">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="row">
 
-                                <div class="col-md-12">
-                                    <div class="card">
-                                        <div class="card-body" >
-                                            <form  data-th-action="${addStatus==false?'/serviceType/save' :'/serviceType/update'}"
-                                                  method="post" data-th-object="${serviceType}"
-                                                  class="mt-3">
-                                                <div class="offset-3 col-6">
-                                                    <!--/* id this comment not visualize */-->
-                                                    <!--Id-->
-                                                    <div class="form-group row" data-th-if="${addStatus==true}">
-                                                        <label for="id" class="col-sm-4 col-form-label "> Id </label>
-                                                        <div class="col-sm-8">
-                                                            <input type="text" class="form-control" data-th-field="*{id}"
-                                                                   id="id" readonly>
-                                                        </div>
+                            <div class="col-md-12">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <form data-th-action="${addStatus==false?'/serviceType/save' :'/serviceType/update'}"
+                                              method="post" data-th-object="${serviceType}"
+                                              class="mt-3">
+                                            <div class="offset-3 col-6">
+                                                <!--/* id this comment not visualize */-->
+                                                <!--Id-->
+                                                <div class="form-group row" data-th-if="${addStatus==true}">
+                                                    <label for="id" class="col-sm-4 col-form-label "> Id </label>
+                                                    <div class="col-sm-8">
+                                                        <input type="text" class="form-control" data-th-field="*{id}"
+                                                               id="id" readonly>
                                                     </div>
-
-                                                    <!--Interview name-->
-                                                    <div class="form-group row">
-                                                        <label data-th-for="${'name'}" class="col-sm-4 col-form-label ">
-                                                            Lab Test Name </label>
-                                                        <div class="col-sm-8">
-                                                            <input type="text" class="form-control" data-th-field="*{name}"
-                                                                   required>
-                                                            <p class="text-danger" data-th-if="${#fields.hasErrors('name')}"
-                                                               data-th-errors="*{name}">Error Name</p>
-                                                        </div>
-                                                    </div>
-
-
-                                                    <div class="form-row text-right">
-                                                        <div class="col-md-4">
-                                                            <label class="control-label" for="title">Specification Name :</label>
-                                                        </div>
-                                                        <div class="col-md-8">
-                                                            <select id="title" th:field="*{compoundPropertyName}" class="form-control" tabindex="3" required>
-                                                                <option value="">Please select</option>
-                                                                <option th:each="compoundPropertyName : ${compoundPropertyNames}"
-                                                                        th:text="${compoundPropertyName.compoundPropertyName}"
-                                                                        th:value="${compoundPropertyName}"></option>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="form-group row">
-                                                        <label data-th-for="${'serviceTypeStatus'}" class="col-sm-4 col-form-label ">
-                                                            Lab Test Parameters </label>
-                                                        <div class="col-sm-8">
-                                                            <select class="form-control" data-th-field="*{serviceTypeParameters}" required multiple row="6">
-                                                                <option data-th-each="serviceTypeParameter : ${serviceTypeParameters}"
-                                                                        data-th-text="${serviceTypeParameter.specificationName.specificationName}"
-                                                                        data-th-value="${serviceTypeParameter.id}">
-                                                                </option>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-
-
-
-                                                    <div class="form-group row">
-                                                        <div class="offset-sm-2 col-sm-10">
-                                                            <button type="submit" class="btn btn-primary">
-                                                                <i data-th-class="${addStatus==false?'fa fa-save mr-1':'fa fa-thumbs-up mr-1'}"></i>
-                                                                <span
-                                                                        data-th-text="${addStatus==false?'Save' : 'Update'}"></span>
-                                                            </button>
-                                                        </div>
-                                                    </div>
-
                                                 </div>
 
-                                            </form>
-                                        </div>
+                                                <!--Interview name-->
+                                                <div class="form-group row">
+                                                    <label data-th-for="${'name'}" class="col-sm-4 col-form-label ">
+                                                        Lab Test Name </label>
+                                                    <div class="col-sm-8">
+                                                        <input type="text" class="form-control" data-th-field="*{name}"
+                                                               required>
+                                                        <p class="text-danger" data-th-if="${#fields.hasErrors('name')}"
+                                                           data-th-errors="*{name}">Error Name</p>
+                                                    </div>
+                                                </div>
+
+
+                                                <div class="form-row text-right">
+                                                    <div class="col-md-4">
+                                                        <label class="control-label" for="title">Service Type Name
+                                                                                                 :</label>
+                                                    </div>
+                                                    <div class="col-md-8">
+                                                        <select id="title" data-th-field="*{serviceTypeParameters}"
+                                                                class="form-control"
+                                                                tabindex="3" required multiple>
+                                                            <option value="" disabled>Please select</option>
+                                                            <option
+                                                                    data-th-each="serviceTypeParamter : ${serviceTypeParameters}"
+                                                                    data-th-text="${serviceTypeParamter.name}"
+                                                                    data-th-value="${serviceTypeParamter.id}"></option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+
+                                                <!--vehicle model list-->
+                                                <div class="form-row text-right">
+                                                    <label class="col-sm-4 col-form-label " for="vehicleModel">Vehicle Type
+                                                                                                               :</label>
+                                                    <div class="col-md-8">
+                                                        <select id="vehicleModel" data-th-field="*{vehicleModel}"
+                                                                class="form-control"
+                                                                tabindex="3" required >
+                                                            <option value="" disabled>Please select</option>
+                                                            <option
+                                                                    data-th-each="vehicleModel : ${vehicleModels}"
+                                                                    data-th-text="${vehicleModel.vehicleModel}"
+                                                                    data-th-value="${vehicleModel}"></option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+
+
+
+                                                <div class="form-group row">
+                                                    <div class="offset-sm-2 col-sm-10">
+                                                        <button type="submit" class="btn btn-primary">
+                                                            <i data-th-class="${addStatus==false?'fa fa-save mr-1':'fa fa-thumbs-up mr-1'}"></i>
+                                                            <span
+                                                                    data-th-text="${addStatus==false?'Save' : 'Update'}"></span>
+                                                        </button>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+
+                                        </form>
                                     </div>
-
-
                                 </div>
+
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-    </div></div>
+        </div>
+    </div>
+</div>
 </div><!-- content-wrapper end -->
-<footer th:replace="~{fragments/footer :: footerFragment}"></footer><!-- footer Section -->
+<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer><!-- footer Section -->
 </div><!-- wrapper end -->
-<script th:replace="~{fragments/script :: scriptFragment}"></script><!-- script Fragment -->
+<script data-th-replace="~{fragments/script :: scriptFragment}"></script><!-- script Fragment -->
 </body>
 </html>
