--- a/src/main/resources/templates/serviceType/serviceType-detail.html
+++ b/src/main/resources/templates/serviceType/serviceType-detail.html
@@ -51,27 +51,21 @@
                                             </div>
 
                                             <div class="form-group row">
-                                                <label class="col-sm-2 col-form-label "> Name :</label>
+                                                <label class="col-sm-2 col-form-label ">Service Type Name :</label>
                                                 <div class="col-sm-10">
                                                     <p class="display_detail" data-th-text="${serviceTypeDetail.name}"></p>
                                                 </div>
                                             </div>
 
-                                            <div class="form-group row">
-                                                <label class="col-sm-2 col-form-label "> LabTest Status :</label>
-                                                <!--<div class="col-sm-10">
-                                                    <p class="display_detail"
-                                                       data-th-text="${serviceTypeDetail.labTestStatus.labTestStatus}"></p>
-                                                </div>-->
-                                            </div>
-
 
                                             <div class="form-group row">
-                                                <label class="col-sm-2 col-form-label "> LabTest Parameter :</label>
+                                                <label class="col-sm-2 col-form-label "> Service Type Parameter
+                                                                                         :</label>
                                                 <div class="col-sm-10">
-                                                    <p class="display_detail"
-                                                       data-th-each="serviceTypeParameter : ${serviceTypeDetail.labTestParameters}"
-                                                       data-th-text="${serviceTypeParameter.name} "></p>
+                                                    <ol>
+                                                        <li data-th-each="serviceTypeParameter : ${serviceTypeDetail.serviceTypeParameters}"
+                                                            data-th-text="${serviceTypeParameter.name}"></li>
+                                                    </ol>
                                                 </div>
                                             </div>
                                         </div>
