--- a/src/main/resources/templates/vehicle/addVehicle.html
+++ b/src/main/resources/templates/vehicle/addVehicle.html
@@ -4,72 +4,128 @@
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
 </head>
-<script>
-
-    let amv = {"name": "Asanka", "age": 30, "mobile": "0772350438"}
-</script>
 <body>
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <div class="container-fluid bg-dark">
-    <form action="/vehicle/save" method="post">
-        <!--vehicle id need to hide but need to show when update-->
-        <input type="text" hidden>
-        <!--Registration number need to show-->
-        <div class="form-group">
-            <label for="example-input">Registration Number</label>
-            <input type="text" name="registrationNumber" class="form-control" placeholder="Example" id="example-input">
-        </div>
-        <!--vehicle number-->
-        <div class="form-group">
-            <label for="example-input">Vehicle Number</label>
-            <input type="text" name="number" class="form-control" placeholder="Example" id="example-input">
-        </div>
-        <!--engine number-->
-        <div class="form-group">
-            <label for="example-input">Engine Number</label>
-            <input type="text" name="engineNumber" class="form-control" placeholder="Example" id="example-input">
-        </div>
-        <!--chassis number-->
-        <div class="form-group">
-            <label for="example-input">Chassis Number</label>
-            <input type="text" name="chassisNumber" class="form-control" placeholder="Example" id="example-input">
-        </div>
-        <!--manufacture year-->
-        <div class="form-group">
-            <label for="example-input">Manufacture Year</label>
-            <input type="text" name="manufacturedYear" class="form-control" placeholder="Example" id="example-input">
-        </div>
-        <!--gear year-->
-        <div class="form-group">
-            <label for="example-input">Gear Year</label>
-            <input type="text" name="gearNumber" class="form-control" placeholder="Example" id="example-input">
-        </div>
-        <!--vehicle type list-->
-        <div class="form-group">
-            <label for="vehicleType" >Vehicle Type</label>
-            <select class="form-control" name="vehicleType" id="vehicleType">
-                <option selected>Custom select</option>
-                <option value="1">Option one</option>
-            </select>
-        </div>
-        <!--vehicle model list-->
-        <div class="form-group">
-            <label for="vehicleModel" >Vehicle Model</label>
-            <select class="form-control" name="vehicleModel" id="vehicleModel">
-                <option selected>Custom select</option>
-                <option value="1">Option one</option>
-            </select>
-        </div>
-        <div class="form-group ">
-            <div class="offset-sm-2 col-sm-10">
-                <button type="submit" class="btn btn-primary">
-                    <i data-th-class="${addStatus==false?'fa fa-save mr-1':'fa fa-thumbs-up mr-1'}"></i>
-                    <span
-                            data-th-text="${addStatus==false?'Save' : 'Update'}"></span>
-                </button>
+    <form data-th-action="${addStatus==false?'/vehicle/save' :'/vehicle/update'}"
+          method="post" data-th-object="${vehicle}"
+          class="mt-3">
+        <div class="offset-3 col-6">
+            <!--/* id this comment not visualize */-->
+            <!--Id-->
+            <input type="text" data-th-if="${addStatus==true}" class="form-control" data-th-field="*{id}"
+                   id="id" hidden>
+            <!--vehicle id need to hide but need to show when update-->
+            <!--Registration number need to show-->
+            <div class="form-group row" data-th-if="${addStatus==true}">
+                <label data-th-for="${'name'}" class="col-sm-4 col-form-label ">
+                    Lab Test Name </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{registrationNumber}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('registrationNumber')}"
+                       data-th-errors="*{registrationNumber}">Error Name</p>
+                </div>
             </div>
-        </div>
+            <!--customer-->
+            <div class="form-row text-right">
+                <label class="col-sm-4 col-form-label " for="customer">Customer
+                                                                           :</label>
+                <div class="col-md-8">
+                    <select id="customer" data-th-field="*{customer}"
+                            class="form-control"
+                            tabindex="3" required >
+                        <option value="" disabled>Please select</option>
+                        <option
+                                data-th-each="customer : ${customers}"
+                                data-th-text="${customer.name}"
+                                data-th-value="${customer.id}"></option>
+                    </select>
+                </div>
+            </div>
+            <!--vehicle number-->
+            <div class="form-group row">
+                <label data-th-for="${'number'}" class="col-sm-4 col-form-label ">
+                    Lab Test Name </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{number}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('number')}"
+                       data-th-errors="*{number}">Error Name</p>
+                </div>
+            </div>
+            <!--engine number-->
+            <div class="form-group row">
+                <label data-th-for="${'engineNumber'}" class="col-sm-4 col-form-label ">
+                    Lab Test Name </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{engineNumber}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('engineNumber')}"
+                       data-th-errors="*{engineNumber}">Error Name</p>
+                </div>
+            </div>
+            <!--chassis number-->
+            <div class="form-group row">
+                <label data-th-for="${'chassisNumber'}" class="col-sm-4 col-form-label ">
+                    Lab Test Name </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{chassisNumber}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('chassisNumber')}"
+                       data-th-errors="*{chassisNumber}">Error Name</p>
+                </div>
+            </div>
+            <!--manufacture year-->
+            <div class="form-group row">
+                <label data-th-for="${'manufacturedYear'}" class="col-sm-4 col-form-label ">
+                    Lab Test Name </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{manufacturedYear}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('manufacturedYear')}"
+                       data-th-errors="*{manufacturedYear}">Error Name</p>
+                </div>
+            </div>
+            <!--gear year-->
+            <div class="form-group row">
+                <label data-th-for="${'gearNumber'}" class="col-sm-4 col-form-label ">
+                    Lab Test Name </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{gearNumber}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('gearNumber')}"
+                       data-th-errors="*{gearNumber}">Error Name</p>
+                </div>
+            </div>
+
+            <!--vehicle model list-->
+            <div class="form-row text-right">
+                <label class="col-sm-4 col-form-label " for="vehicleModel">Vehicle Type
+                                                                    :</label>
+                <div class="col-md-8">
+                    <select id="vehicleModel" data-th-field="*{vehicleModel}"
+                            class="form-control"
+                            tabindex="3" required >
+                        <option value="" disabled>Please select</option>
+                        <option
+                                data-th-each="vehicleModel : ${vehicleModels}"
+                                data-th-text="${vehicleModel.vehicleModel}"
+                                data-th-value="${vehicleModel}"></option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group ">
+                <div class="offset-sm-2 col-sm-10">
+                    <button type="submit" class="btn btn-primary">
+                        <i data-th-class="${addStatus==false?'fa fa-save mr-1':'fa fa-thumbs-up mr-1'}"></i>
+                        <span
+                                data-th-text="${addStatus==false?'Save' : 'Update'}"></span>
+                    </button>
+                </div>
+            </div>
     </form>
 </div>
 
