--- a/src/main/resources/templates/vehicle/vehicle.html
+++ b/src/main/resources/templates/vehicle/vehicle.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: headerFragment}">
+<head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
 </head>
 <body>
-<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <div class="container-fluid bg-secondary form-Border">
     <div class="row text-center formManagement border-info">
@@ -26,25 +26,34 @@
     </div>
 </div>
 <div class="container-fluid bg-dark formBorder">
-    <div class="offset-2 col-8 col-sm-8 col-md-8" id="roleListPresent" th:if="${not #lists.isEmpty(vehicles)}">
+    <div class="offset-2 col-8 col-sm-8 col-md-8" id="roleListPresent" data-th-if="${not #lists.isEmpty(vehicles)}">
         <div class="table-responsive">
             <table class="table table-striped table-condensed">
                 <thead>
                 <tr>
                     <th> Index</th>
-                    <th> Name</th>
+                    <th> Number</th>
+                    <th> Owner name</th>
+                    <th> Manufacture Year</th>
                     <th > Modify</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="vehicle, rowCount : ${vehicles}">
-                    <th th:text="${rowCount.count}"></th>
-                    <th th:text="${vehicle.roleName}"></th>
+                <tr data-th-each="vehicle, rowCount : ${vehicles}">
+                    <th data-th-text="${rowCount.count}"></th>
+                    <th data-th-text="${vehicle.number}"></th>
+                    <th data-th-text="${vehicle.customer.name}"></th>
+                    <th data-th-text="${vehicle.manufacturedYear}"></th>
                     <th >
-                        <a id="edit" th:href="${'/vehicle/edit/' + vehicle.id}" class="btn btn-primary btn-sm mr-2 p-2">Edit
+                        <a data-th-href="${'/vehicle/view/' + vehicle.id}"
+                           class="btn btn-primary btn-sm mr-2 p-2">View
                         </a>
                         &nbsp;
-                        <a id="remove" th:href="${'/vehicle/delete/' + vehicle.id}" class="btn btn-danger btn-sm mr-2 p-2"
+                        <a  data-th-href="${'/vehicle/edit/' + vehicle.id}" class="btn btn-primary btn-sm mr-2 p-2">Edit
+                        </a>
+                        &nbsp;
+                        <a id="remove" data-th-href="${'/vehicle/delete/' + vehicle.id}"
+                           class="btn btn-danger btn-sm mr-2 p-2"
                            onclick="if
                         (!(confirm('Are you sure you want to delete this vehicle?'))) return false"
                         >Delete</a></th>
@@ -55,9 +64,9 @@
     </div>
 </div>
 <!--footer include-->
-<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
+<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script include-->
-<script th:replace="~{fragments/script :: scriptFragment}"></script>
+<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
 
 </body>
 </html>
