--- a/src/main/resources/templates/customer/customer.html
+++ b/src/main/resources/templates/customer/customer.html
@@ -13,7 +13,7 @@
         <div class="col">
             <a class="btn btn-success" href="/customer/add" tabindex="1">
                 <i class="fas fa-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New
-            </a>
+             </a>
         </div>
         <!--List Name-->
         <div class="col">
@@ -24,7 +24,7 @@
             </h2>
         </div>
         <!--Home Button-->
-        <div class="col">
+        <div class="col"  id="home">
             <a href="/home" id="searchShow" class="btn btn-primary" tabindex="2">
                 <!--<i class="fa fa-user " style="font-size: 20px"></i>&nbsp;Add&nbsp;-->
                 <i class="fas fa-home" style="font-size: 20px"></i>&nbsp;&nbsp;Home
@@ -33,11 +33,11 @@
     </div>
 </div>
 <!--Customers List-->
-<div class="container-fluid bg-primary text-center">
+<div class="container-fluid " id="tableback>
     <!--Table view-->
-    <div class="col">
+    <div class="col" " >
         <div class="col" id="customerListPresent" th:if="${not #lists.isEmpty(customers)}">
-            <table class="table table-hover table-striped" id="myTable">
+            <table class="table table-dark table-striped" id="myTable">
                 <thead>
                 <tr>
                     <th> Index</th>
