--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="headerFragment">
-    <title th:if="${headerTitle==null}" th:text="${'W3Academy'}">Spring boot - Thymeleaf</title>
+    <title th:if="${headerTitle==null}" th:text="${'Nandana motors'}">Spring boot - Thymeleaf</title>
     <title th:if="${headerTitle!=null}" th:text="${headerTitle}">Spring boot - Thymeleaf</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -24,7 +24,10 @@
     <!--table pagination-->
     <link th:href="@{/css/dataTables.bootstrap.min.css}" media="all" rel="stylesheet" type="text/css"/>
     <!-- Custom styles for this template -->
-    <link th:href="@{/css/myCss.css}" media="all" rel="stylesheet" type="text/css"/>
+    <!--<link th:href="@{/css/myCss.css}" media="all" rel="stylesheet" type="text/css"/>-->
+    <link th:href="@{/css/stylelog.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/employee.css}" media="all" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/customer.css}" media="all" rel="stylesheet" type="text/css"/>
     <!-- fontawesome css -->
     <link th:href="@{/webjars/font-awesome/5.11.2/css/fontawesome.min.css} " media="all" rel="stylesheet" type="text/css"/>
     <!--image uploader css-->
