--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -3,8 +3,8 @@
 <body>
 
 
-<nav class="navbar navbar-expand-sm navbar-dark " style="background-color: #2f7efd;" th:fragment="navBarFragment">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-sm navbar-dark " style="background-color: black;" th:fragment="navBarFragment">
+    <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation"></button>
@@ -16,6 +16,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Contact us <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/">About us <span class="sr-only">(current)</span></a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
                    aria-expanded="false">Dropdown</a>
@@ -24,12 +30,15 @@
                     <a class="dropdown-item" href="#">Action 2</a>
                 </div>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Help<span class="sr-only">(current)</span></a>
+            </li>
         </ul>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
             </li>
             <li class="nav-item active">
-            <a data-th-href="@{'/employee'}" class="nav-link"> Employee</a>
+            <a data-th-href="@{'/employee'}" class="nav-link"> Nandana Motors</a>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search">
