--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -5,27 +5,62 @@
     <title>Thymeleaf Springboot </title>
 </head>
 <body id="loginBack">
-<div class="col full-height " id="loginPage">
-    <div class="col-8 col-sm-4 form-box bg-transparent ui-widget-content" id="draggable">
+<div class="container-fluid " id="loginPage">
+    <div class="row">
+        <div class="col-lg-6 col-md-6 d-none d-md-block image-container"></div>
+        <div class="col-lg-6 col-md-6 form-container">
+            <div class="col-lg-8 col-md-12 col-sm-9 col-xs-12 form-box text-center">
+                <div class="logo-mb-3">
+                    <img src="../img/face3.jpg" width="80px">
+                </div>
+                <div class="heading-mb-4">
+                    <h4>LOGIN INTO YOUR ACCOUNT</h4>
+                </div>
+   <!-- <div class="col-8 col-sm-4 form-box bg-transparent ui-widget-content" id="draggable">-->
         <form th:action="${'/login'}" method="post">
             <br/>
             <fieldset>
                 <!--   <legend class="text-lg-center bg-white"><h3><strong> Excise Department - Sri Lanka</strong></h3>
                    </legend>-->
-                <div class="form-label-group">
+                <div class="form-input">
+                    <span><i class="fa fa-envelope"></i></span>
+                    <label for="username"><b>Username</b></label>
                     <input type="text" id="username" th:name="${'username'}" class="form-control" placeholder="username"
                            required>
-                    <label for="username">Username</label>
+
                 </div>
-                <div class="form-label-group">
+                <div class="form-input">
+                    <span><i class="fa fa-lock"></i></span>
+                    <label for="inputPassword"><b>Password</b></label>
                     <input type="password" id="inputPassword" th:name="${'password'}" class="form-control"
                            placeholder="password"
                            required>
-                    <label for="inputPassword">Password</label>
+
                 </div>
-                <div class="form-group text-right">
+                <div class="row mb-3">
+                    <div class="col-6 d-flex">
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="cc1">
+                            <label class="custom-control-label text white" for="cc1">Remember me</label>
+                        </div>
+                    </div>
+                    <div class="col-6 text-right">
+                        <a href="myforgot.html" class="forgot-link">Forgot Password</a>
+                    </div>
+                </div>
+                <div class="text-left mb-3">
                     <button class="btn btn-primary " type="submit">LOGIN</button>
                 </div>
+                <div class="text=center mb-2">
+                    <div class="mb-3" style="color:red">or login with</div>
+                    <a href="" class="btn btn-social btn-facebook">Facebook</a>
+                    <a href="" class="btn btn-social btn-google">google</a>
+                    <a href="" class="btn btn-social btn-twitter">twitter</a>
+                </div>
+                <div style="color: #777">Dont have an account</div>
+                <a href="myregister.html" class="register-link">Register here</a>
+
+
             </fieldset>
             <div class="container-fluid " th:if="${param.error}">
                 <p class="bg-white text-capitalize text-danger text-lg-center">Invalid username or password. </p>
@@ -34,6 +69,8 @@
                 <p id="errorMessage" th:text="${err}" class="bg-white text-capitalize text-danger text-lg-center"></p>
             </div>
         </form>
+    </div>
+</div>
     </div>
 </div>
 <!--footer include-->
