--- a/src/main/resources/templates/vehicle/addVehicle.html
+++ b/src/main/resources/templates/vehicle/addVehicle.html
@@ -6,12 +6,24 @@
 </head>
 <body>
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
+<div class="card" id="card" >
+    <div class="card-body" >
+        <div class="col"id="hom">
+            <a class="btn btn-primary" href="/home" tabindex="2">
+                <i class="fa fa-home" style="font-size: 15px"></i> &nbsp;&nbsp;Home
+            </a>
+        </div>
+<div class="col" id="viewlist">
+    <a href="/vehicle" class="btn btn-primary" tabindex="1">
+        <i class="fa fa-th-list"aria-hidden="true" style="font-size:15px"></i>&nbsp;&nbsp;View vehicles
+    </a>
+</div>
 
-<div class="container-fluid bg-dark">
+<div class="container-fluid" id="frm">
     <form data-th-action="${addStatus==false?'/vehicle/save' :'/vehicle/update'}"
           method="post" data-th-object="${vehicle}"
-          class="mt-3">
-        <div class="offset-3 col-6">
+          class="mt-3" >
+        <div class="class-md-3">
             <!--/* id this comment not visualize */-->
             <!--Id-->
             <input type="text" data-th-if="${addStatus==true}" class="form-control" data-th-field="*{id}"
@@ -19,7 +31,7 @@
             <!--vehicle id need to hide but need to show when update-->
             <!--Registration number need to show-->
             <div class="form-group row" data-th-if="${addStatus==true}">
-                <label data-th-for="${'name'}" class="col-sm-4 col-form-label ">
+                <label data-th-for="${'name'}" class="label col-md-3 control-label ">
                     Lab Test Name </label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control" data-th-field="*{registrationNumber}"
@@ -29,10 +41,10 @@
                 </div>
             </div>
             <!--customer-->
-            <div class="form-row text-right">
-                <label class="col-sm-4 col-form-label " for="customer">Customer
+            <div class="col-md-auto">
+                <label class="col-sm-4 col-form-label"for="customer">Customer
                                                                            :</label>
-                <div class="col-md-8">
+                <div class="col-md-4">
                     <select id="customer" data-th-field="*{customer}"
                             class="form-control"
                             tabindex="3" required >
@@ -44,67 +56,11 @@
                     </select>
                 </div>
             </div>
-            <!--vehicle number-->
-            <div class="form-group row">
-                <label data-th-for="${'number'}" class="col-sm-4 col-form-label ">
-                    Lab Test Name </label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" data-th-field="*{number}"
-                           required>
-                    <p class="text-danger" data-th-if="${#fields.hasErrors('number')}"
-                       data-th-errors="*{number}">Error Name</p>
-                </div>
-            </div>
-            <!--engine number-->
-            <div class="form-group row">
-                <label data-th-for="${'engineNumber'}" class="col-sm-4 col-form-label ">
-                    Lab Test Name </label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" data-th-field="*{engineNumber}"
-                           required>
-                    <p class="text-danger" data-th-if="${#fields.hasErrors('engineNumber')}"
-                       data-th-errors="*{engineNumber}">Error Name</p>
-                </div>
-            </div>
-            <!--chassis number-->
-            <div class="form-group row">
-                <label data-th-for="${'chassisNumber'}" class="col-sm-4 col-form-label ">
-                    Lab Test Name </label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" data-th-field="*{chassisNumber}"
-                           required>
-                    <p class="text-danger" data-th-if="${#fields.hasErrors('chassisNumber')}"
-                       data-th-errors="*{chassisNumber}">Error Name</p>
-                </div>
-            </div>
-            <!--manufacture year-->
-            <div class="form-group row">
-                <label data-th-for="${'manufacturedYear'}" class="col-sm-4 col-form-label ">
-                    Lab Test Name </label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" data-th-field="*{manufacturedYear}"
-                           required>
-                    <p class="text-danger" data-th-if="${#fields.hasErrors('manufacturedYear')}"
-                       data-th-errors="*{manufacturedYear}">Error Name</p>
-                </div>
-            </div>
-            <!--gear year-->
-            <div class="form-group row">
-                <label data-th-for="${'gearNumber'}" class="col-sm-4 col-form-label ">
-                    Lab Test Name </label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" data-th-field="*{gearNumber}"
-                           required>
-                    <p class="text-danger" data-th-if="${#fields.hasErrors('gearNumber')}"
-                       data-th-errors="*{gearNumber}">Error Name</p>
-                </div>
-            </div>
-
             <!--vehicle model list-->
-            <div class="form-row text-right">
+            <div class="col-md-auto">
                 <label class="col-sm-4 col-form-label " for="vehicleModel">Vehicle Type
-                                                                    :</label>
-                <div class="col-md-8">
+                    :</label>
+                <div class="col-md-4">
                     <select id="vehicleModel" data-th-field="*{vehicleModel}"
                             class="form-control"
                             tabindex="3" required >
@@ -116,13 +72,73 @@
                     </select>
                 </div>
             </div>
+            <!--vehicle number-->
+            <div class="col-md-auto">
+                <label data-th-for="${'number'}" class="col-sm-4 col-form-label">
+                    Vehicle Number </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{number}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('number')}"
+                       data-th-errors="*{number}">Error Name</p>
+                </div>
+            </div>
+            <!--engine number-->
+            <div class="col-md-auto">
+                <label data-th-for="${'engineNumber'}" class="col-sm-4 col-form-label">
+                    Engine Number </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{engineNumber}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('engineNumber')}"
+                       data-th-errors="*{engineNumber}">Error Name</p>
+                </div>
+            </div>
+            <!--chassis number-->
+            <div class="col-md-auto">
+                <label data-th-for="${'chassisNumber'}" class="col-sm-4 col-form-label">
+                    Chassis Number </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{chassisNumber}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('chassisNumber')}"
+                       data-th-errors="*{chassisNumber}">Error Name</p>
+                </div>
+            </div>
+            <!--manufacture year-->
+            <div class="col-md-auto">
+                <label data-th-for="${'manufacturedYear'}" class="col-sm-4 col-form-label">
+                    Manufacture Year </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{manufacturedYear}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('manufacturedYear')}"
+                       data-th-errors="*{manufacturedYear}">Error Name</p>
+                </div>
+            </div>
+            <!--gear year-->
+            <div class="col-md-auto">
+                <label data-th-for="${'gearNumber'}" class="col-sm-4 col-form-label ">
+                    Gear Number </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" data-th-field="*{gearNumber}"
+                           required>
+                    <p class="text-danger" data-th-if="${#fields.hasErrors('gearNumber')}"
+                       data-th-errors="*{gearNumber}">Error Name</p>
+                </div>
+            </div>
+
+
 
             <div class="form-group ">
-                <div class="offset-sm-2 col-sm-10">
+                <div class="offset-md-6 col-md-6">
                     <button type="submit" class="btn btn-primary">
                         <i data-th-class="${addStatus==false?'fa fa-save mr-1':'fa fa-thumbs-up mr-1'}"></i>
                         <span
                                 data-th-text="${addStatus==false?'Save' : 'Update'}"></span>
+                    </button>
+                    <button class="btn btn-danger" type="reset" tabindex="9">
+                        <i class="far fa-times-circle" style="font-size: 20px"></i>&nbsp;&nbsp;Clear
                     </button>
                 </div>
             </div>
