--- a/src/main/resources/templates/vehicle/vehicle.html
+++ b/src/main/resources/templates/vehicle/vehicle.html
@@ -31,7 +31,7 @@
             <table class="table table-striped table-condensed">
                 <thead>
                 <tr>
-                    <th> Index</th>
+                    <th> Customer name</th>
                     <th> Number</th>
                     <th> Owner name</th>
                     <th> Manufacture Year</th>
