--- a/src/main/resources/static/css/vehicle.css
+++ b/src/main/resources/static/css/vehicle.css
@@ -1,15 +1,12 @@
 
 
-#hom{
 
-    margin-right: 20px;
 
-}
-#viewlist {
-    right: auto;
-    width: auto;
-    left: 50px;
-    height: 800px;
+/*#viewlist {*/
+/*    right: auto;*/
+/*    width: auto;*/
+/*    left: 50px;*/
+/*    height: 800px;*/
 
-}
+/*}*/
 
