--- a/src/main/resources/templates/customer/customer.html
+++ b/src/main/resources/templates/customer/customer.html
@@ -7,22 +7,8 @@
 <body>
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 <!--heading Area-->
-<div class="container-fluid  form-Border">
+<div class="card bg-info">
     <div class="row text-center formManagement border-info">
-        <!--New Customer Button-->
-        <div class="col">
-            <a class="btn btn-success" href="/customer/add" tabindex="1">
-                <i class="fas fa-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New
-             </a>
-        </div>
-        <!--List Name-->
-        <div class="col">
-            <h2 class="text-white text-center">
-                <strong>
-                    Customer List
-                </strong>
-            </h2>
-        </div>
         <!--Home Button-->
         <div class="col"  id="home">
             <a href="/home" id="searchShow" class="btn btn-primary" tabindex="2">
@@ -30,12 +16,28 @@
                 <i class="fas fa-home" style="font-size: 20px"></i>&nbsp;&nbsp;Home
             </a>
         </div>
+        <!--List Name-->
+        <div class="col" >
+            <h2 class="text-white text-center" style="font-size:25px">
+                <strong>
+                    <b>Customer List</b>
+                </strong>
+            </h2>
+        </div>
+
+        <!--New Customer Button-->
+        <div class="col">
+            <a class="btn btn-success" href="/customer/add" tabindex="1">
+                <i class="fas fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New Customer
+             </a>
+        </div>
+
     </div>
 </div>
 <!--Customers List-->
-<div class="container-fluid " id="tableback>
+<div class="container-fluid ">
     <!--Table view-->
-    <div class="col" " >
+    <div class="col"  >
         <div class="col" id="customerListPresent" th:if="${not #lists.isEmpty(customers)}">
             <table class="table table-dark table-striped" id="myTable">
                 <thead>
