--- a/src/main/resources/templates/role/role.html
+++ b/src/main/resources/templates/role/role.html
@@ -7,7 +7,7 @@
 <body>
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-secondary form-Border">
+<div class="card bg-info">
     <div class="row text-center formManagement border-info">
         <div class="col">
             <a class="btn btn-success" href="/role/add">
