--- a/src/main/resources/templates/serviceType/addServiceType.html
+++ b/src/main/resources/templates/serviceType/addServiceType.html
@@ -7,7 +7,7 @@
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-secondary form-Border">
+<div class="card bg-info">
     <div class="row text-center formManagement border-info">
         <div class="col">
             <a class="btn btn-primary" href="/home">
