--- a/src/main/resources/templates/serviceType/serviceType.html
+++ b/src/main/resources/templates/serviceType/serviceType.html
@@ -7,16 +7,23 @@
 <body>
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-secondary form-Border">
+<div class="card bg-info">
     <div class="row text-center formManagement border-info">
+        <!--Home Button-->
+        <div class="col"  id="home">
+            <a href="/home" id="searchShow" class="btn btn-primary" tabindex="2">
+                <!--<i class="fa fa-user " style="font-size: 20px"></i>&nbsp;Add&nbsp;-->
+                <i class="fas fa-home" style="font-size: 20px"></i>&nbsp;&nbsp;Home
+            </a>
+        </div>
         <div class="col">
             <a class="btn btn-success" href="/serviceType/add"><i class="fa fa-user-plus"></i>
-                &nbsp; New Lab Test</a>
+                &nbsp; New Service Type</a>
         </div>
         <div class="col">
             <h4 class="text-info text-center">
                 <strong>
-                    Lab Test Management
+                    Service Type Management
                 </strong>
             </h4>
         </div>
