--- a/src/main/resources/templates/vehicle/vehicle.html
+++ b/src/main/resources/templates/vehicle/vehicle.html
@@ -7,28 +7,37 @@
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-secondary form-Border">
+<div class="card bg-info">
     <div class="row text-center formManagement border-info">
+        <!--Home Button-->
+        <div class="col"  id="home">
+            <a href="/home" id="searchShow" class="btn btn-primary" tabindex="2">
+                <!--<i class="fa fa-user " style="font-size: 20px"></i>&nbsp;Add&nbsp;-->
+                <i class="fas fa-home" style="font-size: 20px"></i>&nbsp;&nbsp;Home
+            </a>
+        </div>
+
+        <div class="col " >
+            <h2 class="text-white text-center" style="font-size: 25px" >
+                <strong><b>
+                    Vehicle List
+                </b>
+                </strong>
+            </h2>
+        </div>
         <div class="col">
             <a class="btn btn-success" href="/vehicle/add">
-                <i class="fa fa-user-plus" style="font-size: 18px;"></i> &nbsp; New Vehicle </a>
+                <i class="fa fa-plus" style="font-size: 20px;"></i> &nbsp; New Vehicle </a>
 
-        </div>
-        <div class="col ">
-            <h4 class="text-info text-center">
-                <strong>
-                    Vehicle Management
-                </strong>
-            </h4>
         </div>
         <div class="col">
         </div>
     </div>
 </div>
-<div class="container-fluid bg-dark formBorder">
+<div class="container-fluid " >
     <div class="offset-2 col-8 col-sm-8 col-md-8" id="roleListPresent" data-th-if="${not #lists.isEmpty(vehicles)}">
-        <div class="table-responsive">
-            <table class="table table-striped table-condensed">
+        <div class="">
+            <table class="table table-dark table-striped table-responsive-sm" id="myTable" >
                 <thead>
                 <tr>
                     <th> Customer name</th>
