--- a/src/main/resources/templates/customer/customer.html
+++ b/src/main/resources/templates/customer/customer.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 <!--Customers List-->
-<div class="container-fluid ">
+<div class="container-fluid "id="frm">
     <!--Table view-->
     <div class="col"  >
         <div class="col" id="customerListPresent" th:if="${not #lists.isEmpty(customers)}">
