--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -3,7 +3,7 @@
 <body>
 
 
-<nav class="navbar navbar-expand-sm navbar-dark " style="background-color:blue;" th:fragment="navBarFragment">
+<nav class="navbar navbar-expand-sm navbar-dark " th:fragment="navBarFragment" id="navhd">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId"
