--- a/src/main/resources/templates/serviceTypeParameter/addServiceTypeParameter.html
+++ b/src/main/resources/templates/serviceTypeParameter/addServiceTypeParameter.html
@@ -76,6 +76,22 @@
                                                                    th:errors="*{name}">Error Name</p>
                                                             </div>
                                                         </div>
+
+
+                                                        <!--price-->
+                                                        <div class="form-group row" >
+                                                            <label th:for="${'price'}" class="col-sm-2 col-form-label " >
+                                                                Price </label >
+                                                            <div class="col-sm-10" >
+                                                                <input type="text" class="form-control"
+                                                                       th:field="*{price}"
+                                                                       required >
+                                                                <p class="text-danger"
+                                                                   th:if="${#fields.hasErrors('price')}"
+                                                                   th:errors="*{price}" >Error Name</p >
+                                                            </div >
+                                                        </div >
+
                                                         <!--Specification Name -->
                                                        <!-- <div class="form-row text-right">
                                                             <div class="col-md-4">
