--- a/src/main/resources/static/css/customer.css
+++ b/src/main/resources/static/css/customer.css
@@ -2,8 +2,8 @@
 
 
 .img{
-    background-color: grey;
-    /*background-image: url('../img/bgone.jpg');*/
+    /*background-color: grey;*/
+    background-image: url('../img/car2.jpg');
     opacity: 1;
 
 }
@@ -17,9 +17,9 @@
 /*    !*height: 150px;*!*/
 
 /*}*/
-#CustomerForm{
-
-
+#customerhead
+{
+;
 
 
 
@@ -36,9 +36,8 @@
     border-radius:0px;
     border-bottom:2px solid white;
     font-size:21px;
-    color:white;
+    color:red;
     margin-top:20px;
-
     font-family: new time roman;
 
 }
