--- a/src/main/resources/static/css/stylelog.css
+++ b/src/main/resources/static/css/stylelog.css
@@ -128,9 +128,47 @@
     background: #2eb7e5;
     color: #fff;}
 
+#navhd{
+    background-color:red;
+    opacity: 0.7;
 
+}
+.carousel-item{
+    height: 100vh;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    background-size:cover;
+    opacity: 0.8;
 
+}
+.carousel-caption{
+    bottom: 220px;
 
+}
+.carousel-caption h5{
+    font-size: 45px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-top: 25px;
+    font-family: "Times New Roman";
+}
+.carousel-caption p{
+    width: 60px;
+    margin: auto;
+    font-size: 18px;
+    line-height: 1.9;
+    font-family: poppins;
+
+}
+.carousel-caption a{
+    text-transform: uppercase;
+    background: red;
+    padding: 10px 30px;
+    display: inline-block;
+    color: #00FFFF;
+    margin-top: 15px;
+}
 
 
 
