--- a/src/main/resources/templates/customer/addCustomer.html
+++ b/src/main/resources/templates/customer/addCustomer.html
@@ -5,38 +5,35 @@
     <meta charset="UTF-8">
     <title>addCustomer</title>
 </head>
-<body>
+<body class="img">
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 <!--Heading Area-->
 <div class="card bg-info " id="card" >
     <div class="card-body">
         <!--Home Button-->
         <div class="row">
-        <div class="col-md-3"  id="hom">
+        <div class="col-md-3 "  id="hom">
             <a href="/home" id="searchShow" class="btn btn-primary" tabindex="2">
                 <!--<i class="fa fa-user " style="font-size: 20px"></i>&nbsp;Add&nbsp;-->
                 <i class="fas fa-backspace" style="font-size: 20px"></i>&nbsp;&nbsp;back
             </a>
         </div>
-            <div class="col-md-7"></div>
-
-        <!--ViewList Button-->
-        <div class="col-md-2">
-            <a href="/customer" class="btn btn-primary" tabindex="1">
-                <i class="fa fa-th-list"aria-hidden="true" style="font-size:15px"></i>&nbsp;&nbsp;View Customers
-            </a>
-        </div>
-        </div>
 
         <!--Form Name-->
-        <div class="col" >
+        <div class="col-md-6" id="customerhead">
             <h2 class="text-light text-center">
                 <strong>
                     <span data-th-text="${addStatus==true?'Add New Customer':'Update Customer Details'}"></span>
                 </strong>
             </h2>
         </div>
-
+            <!--ViewList Button-->
+            <div class="col-md-3 ">
+                <a href="/customer" class="btn btn-primary" tabindex="1">
+                    <i class="fa fa-th-list"aria-hidden="true" style="font-size:15px"></i>&nbsp;&nbsp;View Customers
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 
