--- a/src/main/resources/templates/serviceType/serviceType.html
+++ b/src/main/resources/templates/serviceType/serviceType.html
@@ -47,7 +47,7 @@
 
 
         <div class="content-header">
-            <div class="container-fluid">
+            <div class="container-fluid"id="frm">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="row">
